--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@waxio/waxjs",
-  "version": "1.0.4",
+  "name": "@bearfinn/waxjs",
+  "version": "1.0.5",
   "description": "Javascript API for integration with the WAX Cloud Wallet.",
   "scripts": {
     "build": "tsc",
@@ -40,7 +40,8 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
-    "eosjs": "^22.1.0"
+    "eosjs": "^22.1.0",
+    "node-fetch": "^3.0.0"
   },
   "files": [
     "dist"
